Change on metrics to include Non-Prod Environments

--- a/app/views/metrics/_form.html.erb
+++ b/app/views/metrics/_form.html.erb
@@ -35,6 +35,10 @@
     <%= f.label :heapUsed %><br>
     <%= f.text_field :heapUsed %>
   </div>
+  <div class="field">
+    <%= f.label :environment %><br>
+    <%= f.text_field :environment %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
