--- a/app/views/metrics/index.html.erb
+++ b/app/views/metrics/index.html.erb
@@ -1,40 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Metrics</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Memory</th>
-      <th>Memoryfree</th>
-      <th>Processors</th>
-      <th>Heapcommited</th>
-      <th>Heapinit</th>
-      <th>Heapused</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @metrics.each do |metric| %>
-      <tr>
-        <td><%= metric.memory %></td>
-        <td><%= metric.memoryFree %></td>
-        <td><%= metric.processors %></td>
-        <td><%= metric.heapCommited %></td>
-        <td><%= metric.heapInit %></td>
-        <td><%= metric.heapUsed %></td>
-        <td><%= link_to 'Show', metric %></td>
-        <td><%= link_to 'Edit', edit_metric_path(metric) %></td>
-        <td><%= link_to 'Destroy', metric, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <br>
-<%= line_chart @chartLists.map { |key, hash|
-    {name: key, data: hash}
-} %>
-
-<%= link_to 'New Metric', new_metric_path %>
+<%= link_to 'Metrics Event Service', metricsES_path %>
+<br>
+<%= link_to 'Metrics Event Service Consumer Proxy', metricsESCP_path %>
